no more Base64Encoder, JPEGCodec or NotUnimplementedException